server-k8s/manifests/nodered.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodered
  labels:
    app: nodered
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodered
  template:
    metadata:
      labels:
        app: nodered
    spec:
      containers:
      - name: nodered
        image: localhost:5000/node-red:latest
        ports:
        - containerPort: 1880
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /data
          name: nodered-data
        - mountPath: /dev/ttyACM0
          name: ttyacm
      volumes:
      - name: nodered-data
        persistentVolumeClaim:
          claimName: nodered-pvc
      - name: ttyacm
        hostPath:
          path: /dev/ttyACM0
---
apiVersion: v1
kind: Service
metadata:
  name: nodered
spec:
  selector:
    app: nodered
  ports:
    - protocol: TCP
      port: 1880
      targetPort: 1880
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: nodered
spec:
  rules:
  - host: nodered.home
    http:
      paths:
      - backend:
          serviceName: nodered
          servicePort: 1880
---
apiVersion: v1
kind: Service
metadata:
  name: mqtt
spec:
  selector:
    app: nodered
  ports:
    - protocol: TCP
      port: 1883
      targetPort: 1883
